Hot fix to align grid

--- a/app/assets/stylesheets/lost_pet.scss
+++ b/app/assets/stylesheets/lost_pet.scss
@@ -13,7 +13,7 @@
 }
 
 .lostPet__name {
-  min-height: 4rem;
+  min-height: 41px;
   background-color: #a6ce39;
   padding: 10px;
   color: white;
